# crop-cpp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/crop/idp/: EntryMetadata.cpp  EntryMetadata.h  IdpFindPlan.cpp  IdpFindPlan.h  IdpQueryOperator.cpp  IdpQueryOperator.h  IdpQueryPlan.cpp  IdpQueryPlan.h
src/crop/idp/utils/: BitsetUtils.cpp  BitsetUtils.h  SubsetUtils.cpp  SubsetUtils.h
src/wasm/: cropFromWasm.cpp
src/wasm/utils/: ByteBuffer.cpp  ByteBuffer.h  QueryPlansSerializer.cpp  QueryPlansSerializer.h
test/: CMakeLists.txt
test/idp/: IdpFindPlanTest.cpp  IdpQueryPlanTest.cpp
test/idp/utils/: BitsetUtilsTest.cpp  SubsetUtilsTest.cpp
